; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvdimm/extr_btt.c_nvdimm_namespace_detach_btt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvdimm/extr_btt.c_nvdimm_namespace_detach_btt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nd_btt = type { %struct.btt* }
%struct.btt = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nvdimm_namespace_detach_btt(%struct.nd_btt* %0) #0 {
  %2 = alloca %struct.nd_btt*, align 8
  %3 = alloca %struct.btt*, align 8
  store %struct.nd_btt* %0, %struct.nd_btt** %2, align 8
  %4 = load %struct.nd_btt*, %struct.nd_btt** %2, align 8
  %5 = getelementptr inbounds %struct.nd_btt, %struct.nd_btt* %4, i32 0, i32 0
  %6 = load %struct.btt*, %struct.btt** %5, align 8
  store %struct.btt* %6, %struct.btt** %3, align 8
  %7 = load %struct.btt*, %struct.btt** %3, align 8
  %8 = call i32 @btt_fini(%struct.btt* %7)
  %9 = load %struct.nd_btt*, %struct.nd_btt** %2, align 8
  %10 = getelementptr inbounds %struct.nd_btt, %struct.nd_btt* %9, i32 0, i32 0
  store %struct.btt* null, %struct.btt** %10, align 8
  ret i32 0
}

declare dso_local i32 @btt_fini(%struct.btt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
